# zenn-forge

./: .gitattributes  README.md  config.yaml  pyproject.toml
.github/workflows/: weekly.yml
prompts/: resources_body.txt  resources_outline.txt  roadmap_body.txt  roadmap_outline.txt  showcase_body.txt  showcase_outline.txt  tutorial_body.txt  tutorial_outline.txt
src/zenn_forge/: cli.py  config.py  generator.py  ollama.py  publisher.py  scout.py
