[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zenn-forge"
version = "0.1.0"
description = "Zenn 記事自動生成パイプライン (Ollama + zenn-scout)"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.scripts]
zenn-forge = "zenn_forge.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/zenn_forge"]
